rootscopes and updating readme

--- a/joshua/app/views/main.html
+++ b/joshua/app/views/main.html
@@ -1,6 +1,9 @@
 
 <div ng-include="'views/_header.html'" />
 
+    {{rootScopeTest}}
+    {{list}}
+
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
