--- a/joshua/app/views/_header.html
+++ b/joshua/app/views/_header.html
@@ -2,6 +2,7 @@
   <ul class="nav nav-pills pull-right">
     <li><a ng-href="#">Home</a></li>
     <li><a ng-href="#/basics">Basics</a></li>
+    <li><a ng-href="#/firebase">Firebase</a></li>
   </ul>
   <h3 class="text-muted">AngularJS Bootcamp Demo </h3>
 </div>
